# modo

./: README.md  pyproject.toml
src/maddog/: app.py
src/modo/: app.py
