[project]
name = "maddog"
version = "0.1.0"
description = "markdown tools"
authors = [{ name = "James Turk", email = "dev@jpt.sh" }]
dependencies = ["click>=8.1.7"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
